<resources>

    <string name="app_name">AccelerAudio</string>
    <string name="SessionName">Sessione:</string>
    <string name="RecordDate">Data registrazione:</string>
    <string name="LastModifiedDate">Ultima modifica:</string>
    <string name="AsseX">X</string>
    <string name="AsseY">Y</string>
    <string name="AsseZ">Z</string>
    <string name="SelAssi">Seleziona assi:</string>
    <string name="Upsampling">Sovracampionamento:</string>
    <string name="Play">Riproduci sessione</string>
    <string name="Assi">Assi:</string>
    <string name="time">Tempo:</string>
    <string name="campioniRegistratiString">Campioni registrati:</string>
    <string name="nameChoosing">Nome:</string>
    <string name="hintName">Inserisci un nome</string>
    <string name="record">Registra</string>
    <string name="pause">Pausa</string>
    <string name="resume">Riprendi</string>
    <string name="stop">Stop</string>
    <string name="avanti">Avanti</string>
    <string name="alertTitle">Avviso!!!</string>
    <string name="alertMessage">Sei sicuro di voler abbandonare l\'applicazione?</string>
    <string name="plusButtonDesc">La pressione permette di passare alla UI#3</string>
    <string name="Sampling">Campionamento:</string>
    <string name="MaxDur">Durata:</string>
    <string name="save">Salva</string>
    <string name="ListViewHeader">LISTA SESSIONI</string>
    <string name="NoMusicSession">Nessuna music session!\nPremi il tasto + e comincia a registrare!</string>
    <string name="Yes">Si</string>
    <string name="No">No</string>
    <string name="Duplicate">Duplica</string>
    <string name="Rename">Rinomina</string>
    <string name="Delete">Elimina</string>
    <string name="Play_Menu">Riproduci</string>
    <string name="renameAlertMessage">Inserisci un nuovo nome per questa sessione:</string>
    <string name="okAlert">OK</string>
    <string name="ToastAlertSameName">Nome non valido!</string>
    <string name="Cancel">Cancella</string>
    <string name="DeleteMessage">Sei sicuro di voler eliminare questa sessione?</string>
    <string name="characterForbidden">Il carattere " \' " e il " _ " non sono consentiti!</string>
    <string name="lockScreen">Devi bloccare lo schermo!</string>
    <string name="validName">Immettere un nome valido!</string>
    <string name="registrationEnd">Registrazione terminata</string>
    <string name="ImageDesc">Rappresenta la thumbnail della music session</string>
    <string name="Duration">Durata:</string>
    <string name="Preferences">Preferenze</string>
    <string name="pauseButtonDesc">Alla pressione di questo tasto la riproduzione si mette in pausa.</string>
    <string name="SortAlphabetically">Ordina per nome</string>
    <string name="SortById">Ordina per inserimento</string>
    <string name="Sort">Ordina</string>
    <string name="SortByDate">Ordina per data</string>
    <string name="SortByDuration">Ordina per durata</string>
    <string name="alreadySortedByName">La lista è già ordinata per nome</string>
    <string name="alreadySortedByDate">La lista è già ordinata per data</string>
    <string name="alreadySortedByInsertion">La lista è già ordinata per inserimento</string>
    <string name="alreadySortedByDuration">La lista è già ordinata per durata</string>
    <string name="alreadyRecording">Registrazione già in corso!</string>
    <string name="accelUnavailable">Accelerometro non disponibile!</string>
    <string name="screenLockWarning">Per non perdere i dati registrati, l\'orientazione dello schermo verrà bloccata nella posizione in cui è alla pressione del tasto Registra.</string>
    <string name="DontShowAgain">Non mostrare più!</string>
    <string name="addSessionPlease">Registra almeno un paio di sessioni prima di riordinare la lista!</string>
    <string name="spaceUnavailable">Spazio non disponibile!</string>
    <string name="alreadyPlaying">Riproduzione già in corso!</string>
    <string name="cannoteDelete">Impossibile eliminare la traccia in esecuzione!</string>
    <string name="cannotUpdate">Impossibile aggiornare la traccia in esecuzione!</string>
    <string name="speakerUnavailable">Speaker occupati da un\'altra applicazione!</string>
    <string name="savedPref">Preferenze salvate</string>
    <string name="dbError">Errore nel Database</string>
    <string name="noData">Nessuna registrazione presente!</string>
    <string name="labelUI1">AccelerAudio</string>
    <string name="labelUI2">Dettagli</string>
    <string name="labelUI3">Nuova Sessione</string>
    <string name="labelUI4">Riproduzione</string>
    <string name="labelUI5">Preferenze</string>
    <string name="playButtonDesc">Alla pressione di questo tasto comincia la riproduzione</string>
    <string name="stopButtonDesc">Alla pressione di questo tasto termina la riproduzione</string>
    <string name="recButtonDesc">Alla pressione di questo tasto comincia la registrazione dei dati dall\'accelerometro</string>
    <string name="prevButtonDesc">Alla pressione di questo tasto si passa alla traccia precedente</string>
    <string name="nextButtonDesc">Alla pressione di questo tasto si passa alla traccia successiva</string>
    <string name="prefButtonDesc">Alla pressione di questo tasto si passa alle preferenze</string>
    <string name="defaultTitle">Titolo</string>
    <string name="defaultLastModified">Ultima Modifica</string>
    <string name="defaultDuration">0,00 s</string>

</resources>