<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI2" >

    <ImageView
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/ImageDesc" />

    <TextView
        android:id="@+id/sessione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/thumbnail"
        android:text="@string/SessionName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/nomeSessione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sessione"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/thumbnail" />

    <TextView
        android:id="@+id/dataRegistrazione"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/thumbnail"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/RecordDate"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/datareg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dataRegistrazione"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/dataRegistrazione" />

    <TextView
        android:id="@+id/dataUltimaModifica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dataRegistrazione"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/LastModifiedDate"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/dataulmod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dataUltimaModifica"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/dataUltimaModifica" />

    <TextView
        android:id="@+id/selezionaAssi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dataUltimaModifica"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/SelAssi"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/checkBoxX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/selezionaAssi"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="10dp"
        android:checked="true"
        android:text="@string/AsseX" />

    <CheckBox
        android:id="@+id/checkBoxY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBoxX"
        android:layout_toRightOf="@+id/checkBoxX"
        android:layout_marginLeft="40dp"
        android:text="@string/AsseY" />

    <CheckBox
        android:id="@+id/checkBoxZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBoxY"
        android:layout_toRightOf="@+id/checkBoxY"
        android:layout_marginLeft="40dp"
        android:text="@string/AsseZ" />

    <TextView
        android:id="@+id/sovracampionamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/checkBoxX"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/Upsampling"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/sovracampionamento"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/toPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/Play" />

    <TextView
        android:id="@+id/res"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sovracampionamento"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/sovracampionamento" />

</RelativeLayout>