<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
<!-- Questo tasto non dev'essere presente -->
    
<!-- Rappresenta la thumbnail della music session che è in riproduzione (opzionale) -->
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_launcher1"
        android:contentDescription="@string/ImageDesc" />
    
<!-- Qui compare il nome della music session che è in riproduzione -->
    <TextView
        android:id="@+id/title_big"
        android:paddingRight="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageView1"
        android:layout_toRightOf="@+id/imageView1"
        android:layout_marginLeft="15dp"
        android:singleLine="true"
        android:ellipsize="end"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_alignLeft="@+id/title_big"
        android:text="@string/Duration"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
<!-- Qui compare la durata della music session che è in riproduzione -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
       	android:layout_toRightOf="@+id/textView2"
       	android:layout_marginLeft="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
 <!-- Qui compare il tempo corrente di riproduzione, il quale dovrà aggiornarsi quando l'utente trascina il cursore della seekbar (opzionale) -->   
     <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="25dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />
     
<!-- Rappresenta la posizione di riproduzione, se non vogliamo implementare la funzionalità che consente all'utente di andare avanti e indietro spostandone il cursore potremmo sostituirla con una semplice progressbar -->
    <SeekBar
        android:id="@+id/seekBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp" />

<!-- Alla pressione di questo tasto la riproduzione si mette in pausa e il tasto commuta nel tasto play(ovvero resume) -->
    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar1"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_action_play"
        android:contentDescription="@string/pauseButtonDesc" />

   
</RelativeLayout>
